projects/compiler/test/typechecker/decorators/error_unlabeled_args.abra
decorator Bar {
  a: String
  b: Int
}

@Bar("asdf", 123)
func foo() {}
